--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,50 +1,13 @@
 body {
-  margin: 20px;
-  padding: 0;
-  font-family: sans-serif;
-}
-.clear {
-  clear: both;
-  content: ""
-}
-
-.game {
-  text-align: center;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.game-info {
-  min-height: 50px;
-}
-
-.cell {
-  background: #fff;
-  border: 1px solid #414c69;
-  float: left;
-  line-height: 34px;
-  height: 34px;
-  text-align: center;
-  width: 34px;
-  cursor: pointer;
-}
-
-.cell:focus {
-  outline: none;
-}
-
-.hidden {
-  background: #7e7b92;
-}
-
-.is-flag,
-.is-mine {
-  color: #fc543c;
-}
-
-.App {
-  text-align: center;
-}
-
-.Loguin {
-  text-align: center;
-  width: 250px;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
